--- a/Docs/assets/css/td4/style.css
+++ b/Docs/assets/css/td4/style.css
@@ -1,11 +1,63 @@
-body{
-    text-align: center;
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    
 }
 
 
-#texte{
-    margin-top: 30px;
-    padding: 15px;
-    border: 2px solid;
-    border-color: black;
+h1{
+    
+    margin-left: 580px;
+    margin-bottom: 100px;
+    display:flex;
+    justify-content: center;
+    position: relative; 
+    background-color: #f0f0f0; 
+    color: #333; 
+    padding: 40px 100px; 
+    border-radius: 15px; 
+    width: max-content; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    background-color: rgb(135, 168, 197);
+    text-align: center;
+    
+}
+#modt {
+    font-size: 20px;
+    font-family:Arial, Helvetica, sans-serif;
+    color: black;
+    text-align: left;
+    margin-top: 20px;
+    
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+}
+.mot{
+    text-align: center;
+    
+    
+    
+}
+.controls {
+    margin-bottom: 100px;
+    margin-left: 380px;
+    text-align: center;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    display:flex;
+    justify-content: center;
+    position: relative; 
+    background-color: #f0f0f0; /
+    color: #333; 
+    padding: 40px 100px; 
+    border-radius: 15px; 
+    width: max-content; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    background-color: aliceblue;
+    text-align: center;
+
 }
